--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-admin-interface==0.7.0
 django-colorfield==0.1.15
 django-flat-responsive==2.0
 django-flat-theme==1.1.4
-django-polls==0.1
+#django-polls==0.1
 gunicorn==19.9.0
 pkg-resources==0.0.0
 psycopg2==2.7.5
